# web_tests_demoqa

./: README.md  conftest.py  pyproject.toml
data/: data.py
generator/: generator.py
locators/: alerts_frame_windows_locators.py  elements_page_locators.py  form_locators.py  interactions_locators.py  widgests_locators.py
pages/: alerts_frame_windows_page.py  base_page.py  elements_page.py  form_page.py  interactions_page.py  widgests_page.py
tests/: alerts_frame_windows_test.py  elements_test.py  form_test.py  interactions_test.py  widgests_test.py
