[tool.poetry]
name = "web-tests-demoqa"
version = "0.1.0"
description = ""
authors = ["dddpr <ddd.pronin@yandex.ru>"]
readme = "README.md"
packages = [{include = "web_tests_demoqa"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
